[package]
name = "bark-bitcoin-ext"
version = "0.1.0-beta.2"
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Extension library to the rust-bitcoin ecosystem crates used in bark"
edition = "2021"

[lib]
name = "bitcoin_ext"

[features]
default = ["bdk", "rpc", "esplora"]
bdk = ["bdk_wallet", "log"]
rpc = ["bdk_bitcoind_rpc"]
esplora = ["rpc", "bdk_esplora", "async-trait", "reqwest"]

[dependencies]
# EXPORTED
bitcoin = { version = "0.32", features = [ "serde", "rand" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"

# INTERNAL
lazy_static.workspace = true
log = { workspace = true, optional = true }
thiserror = { workspace = true }

# rpc
bdk_bitcoind_rpc = { workspace = true, optional = true }
bdk_esplora = { version = "0.22.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false, optional = true }
reqwest = { version = "0.12.18", features = [ "rustls-tls" ], default-features = false, optional = true }
async-trait = { version = "0.1.88", optional = true }

# bdk
bdk_wallet = { version = "2.1.0", optional = true }


[dev-dependencies]
rmp-serde.workspace = true
