[package]
name = "bark-bitcoin-ext"
version = "0.1.0-beta.8"
license = "MIT"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Extension library to the rust-bitcoin ecosystem crates used in bark"
edition = "2021"

[lib]
name = "bitcoin_ext"

[features]
default = ["bdk", "rpc", "all-related-utxos"]
bdk = ["bdk_wallet", "log"]
rpc = ["bdk_bitcoind_rpc"]
# temporary feature to gate the TransactionExt::all_related_utxos function that
# requires a Rust version newer than the rust-bitcoin MSRV.
all-related-utxos = []
wasm-web = ["getrandom"]

[dependencies]
# EXPORTED
bitcoin = { version = "0.32.7", features = [ "serde", "rand" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"

# INTERNAL
lazy_static.workspace = true
log = { workspace = true, optional = true }
thiserror = { workspace = true }

# rpc
bdk_bitcoind_rpc = { workspace = true, optional = true }
reqwest = { version = "0.12.18", features = [ "rustls-tls" ], default-features = false, optional = true }
async-trait = { version = "0.1.88", optional = true }

# bdk
bdk_wallet = { version = "2.1.0", optional = true }

# pin to 0.2 needed to force bdk to use getrandom with js feature
getrandom = { version = "0.2", optional = true, features = ["js"] }

[dev-dependencies]
rmp-serde.workspace = true
