[package]
name = "bark-cln-rpc"
version = "0.1.0+cln.25.09-hold.0.3.2.patched"
edition = "2024"

[lib]
name = "cln_rpc"

[dependencies]
ark-lib = { path = "../lib" }
bitcoin.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace= true
