[package]
name = "bark-cln-rpc"
version = "0.3.0+cln.26.04.1-hold.0.3.3.patched"
license = "MIT"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Generated gRPC code for c-lightning used in bark"
edition = "2024"

[lib]
name = "cln_rpc"

[dependencies]
ark-lib = { version = "0.2.3", path = "../lib" }
bitcoin.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace= true
