[package]
name = "ark-lib"
version = "0.1.0-beta.1"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2024"
repository = "https://codeberg.org/ark-bitcoin/bark"
description = "Primitives for the Ark protocol and bark implementation"

[lib]
name = "ark"

[features]
test-util = [ "serde_json" ]

[dependencies]

# * EXPORTED DEPS
bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
serde = { version = "1.0.219" }

# * INTERNAL DEPS
lazy_static.workspace = true
thiserror.workspace = true
rand.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
# can use bitcoin::hex once they upgrade to v0.3.0
hex-conservative = "0.3.0"

# testing
serde_json = { workspace = true, optional = true }

# using PR branch for musig2 code
[dependencies.secp256k1-musig]
package = "secp256k1-preview-xg2904r5rj"
version = "0.32.0"
features = [ "serde" ]

[dev-dependencies]
bitcoinconsensus = "0.106.0+26.0"
rand = { version = "0.9.0", features = [ "small_rng" ] }
serde_json = { workspace = true }
