[package]
name = "ark-lib"
version = "0.1.0-beta.2"
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
edition = "2021"
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Primitives for the Ark protocol and bark implementation"

[lib]
name = "ark"

[features]
test-util = [ "serde_json" ]

[dependencies]

# * EXPORTED DEPS
bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
bark-bitcoin-ext = { version = "0.1.0-beta.2", path = "../bitcoin-ext", default-features = false }
serde = "1.0.219"
chrono = "0.4"

# * INTERNAL DEPS
lazy_static.workspace = true
thiserror.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
# can use bitcoin::hex once they upgrade to v0.3.0
hex-conservative = "0.3.0"

# testing
serde_json = { workspace = true, optional = true }

# using PR branch for musig2 code
[dependencies.secp256k1-musig]
package = "secp256k1"
version = "0.32.0-beta.2"
features = [ "serde" ]

[dev-dependencies]
rand = { version = "0.9.0", features = [ "small_rng" ] }
serde_json = { workspace = true }
bitcoinkernel = "0.0.24"
