[package]
name = "ark-lib"
version = "0.1.0-beta.4"
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
edition = "2021"
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Primitives for the Ark protocol and bark implementation"

[lib]
name = "ark"
crate-type = ["cdylib", "rlib"]

[features]
test-util = [ "serde_json" ]
wasm-js = [ "getrandom/wasm_js" ]

[dependencies]

# * EXPORTED DEPS
getrandom = "0.3.0" # to enable WASM
rand = "0.9.2"
bitcoin = { version = "0.32", features = [ "serde" ] }
bark-bitcoin-ext = { version = "0.1.0-beta.4", path = "../bitcoin-ext", default-features = false }
serde = "1.0.219"
chrono = "0.4"

# * INTERNAL DEPS
lazy_static.workspace = true
thiserror.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
# can use bitcoin::hex once they upgrade to v0.3.0
hex-conservative = "0.3.0"

# testing
serde_json = { workspace = true, optional = true }

# using PR branch for musig2 code
[dependencies.secp256k1-musig]
package = "secp256k1"
version = "0.32.0-beta.2"
features = [ "serde" ]

[dev-dependencies]
bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
serde_json = { workspace = true }
bitcoinkernel = "0.0.24"
