[package]
name = "bark-server-log"
version = "0.0.0"
edition = "2021"

[lib]
name = "server_log"

[dependencies]
# OWN
ark-lib = { path = "../ark-lib" }
bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }

log.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
humantime.workspace = true

bdk_wallet.workspace = true
bitcoin.workspace = true

tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
