[package]
name = "bark-server-log"
version = "0.1.0-beta.1" # lock to bark-server version
edition = "2024"

[lib]
name = "server_log"

[dependencies]
# OWN
ark-lib = { path = "../lib" }
bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }

log.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
humantime.workspace = true

bdk_wallet.workspace = true
bitcoin.workspace = true

tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
