[package]
name = "bark-server-log"
version = "0.1.0-beta.6" # lock to bark-server version
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "structured log message definitions for bark-server"
edition = "2024"

[lib]
name = "server_log"

[dependencies]
# OWN
ark-lib = { path = "../lib" }
bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
humantime.workspace = true

bdk_wallet.workspace = true
bitcoin.workspace = true

tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-core.workspace = true
tracing-attributes.workspace = true