[package]
name = "bark-server-rpc"
version = "0.1.0-beta.8"
license = "MIT"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "gRPC code for bark-server API"
edition = "2024"

[lib]
name = "server_rpc"

[features]
default = ["tonic-native"]
tonic-native = ["tonic/transport", "tonic/tls-native-roots"]
tonic-web = ["dep:tonic-web-wasm-client", "getrandom/js", "ark-lib/wasm-js"]
server = []
intman = []

[dependencies]
# OWN
ark-lib = { version = "0.1.0-beta.8", path = "../lib" }
bitcoin.workspace = true

getrandom = { version = "0.2", optional = true }

# INTERNAL
log.workspace = true
http.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tokio = { version = "1.35", default-features = false }
thiserror.workspace = true
tonic = { version = "0.14.2", default-features = false, features = ["codegen"] }
tonic-web-wasm-client = { version = "0.8.0", optional = true }

[build-dependencies]
tonic-prost-build.workspace = true
prost.workspace = true
prost-types.workspace = true
