[package]
name = "bark-server-rpc"
version = "0.1.0-beta.7"
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "gRPC code for bark-server API"
edition = "2024"

[lib]
name = "server_rpc"

[features]
server = []
intman = []

[dependencies]
# OWN
ark-lib = { version = "0.1.0-beta.7", path = "../lib" }
bitcoin.workspace = true

# EXPORTED
tonic.workspace = true

# INTERNAL
log.workspace = true
http.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
thiserror.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
prost.workspace = true
prost-types.workspace = true
