[package]
name = "bark-server-rpc"
version = "0.1.2"
license = "MIT"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "gRPC code for bark-server API"
edition = "2024"

[lib]
name = "server_rpc"

[features]
default = ["tonic-native", "tls-native-roots"]

server = []
intman = []

# TLS implementations
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

# Native target features
tonic-native = ["tonic/transport"]
socks5-proxy = ["hyper-util", "hyper-socks2"]

# Web target features
tonic-web = ["dep:tonic-web-wasm-client", "getrandom/js", "ark-lib/wasm-web"]

[dependencies]
# OWN
ark-lib = { version = "0.1.2", path = "../lib" }
bitcoin.workspace = true

# EXPORTED
tonic = { version = "0.14.2", default-features = false, features = ["codegen"] }
tonic-prost.workspace = true
prost.workspace = true
tonic-web-wasm-client = { version = "0.8.0", optional = true }

# INTERNAL
log.workspace = true
http.workspace = true
hyper-util = { workspace = true, optional = true }
hyper-socks2 = { workspace = true, optional = true }
tokio = { version = "1.35", default-features = false }
thiserror.workspace = true

getrandom = { version = "0.2", optional = true }

[build-dependencies]
tonic-prost-build.workspace = true
prost.workspace = true
prost-types.workspace = true
