[package]
name = "bark-server"
version = "0.1.0-beta.5"
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Server implementation of the bitcoin Ark protocol built by Second"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "captaind"
path = "src/bin/captaind/main.rs"

[dependencies]

# OWN
ark-lib = { path = "../lib" }
bark-cln-rpc = { path = "../cln-rpc" }
bark-server-log = { path = "../server-log" }
bark-server-rpc = { path = "../server-rpc", features = ["server", "intman"] }
bark-bitcoin-ext = { path = "../bitcoin-ext" }

# EXPORTED
bitcoin.workspace = true
lightning-invoice.workspace = true
anyhow.workspace = true
serde.workspace = true

# INTERNAL
thiserror.workspace = true
tokio-postgres.workspace = true
bb8.workspace = true
bb8-postgres.workspace = true
postgres-types.workspace = true
refinery = { version = "0.9.0", default-features = false, features = ["tokio-postgres"] }
uuid = { version = "1.17.0", features = ["v4"] }
ipnet = "2.11.0"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
smallvec = "1.13"
indexmap = "2.12.1"

lazy_static.workspace = true
env_logger.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
pin-project.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
config.workspace = true
toml.workspace = true
humantime.workspace = true

bip39.workspace = true
bdk_wallet.workspace = true
bdk_bitcoind_rpc.workspace = true

lightning.workspace = true

tonic = { workspace = true, features = ["tls-ring"] }
tower.workspace = true
hyper.workspace = true
http.workspace = true
http-body.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-core.workspace = true
tracing.workspace = true
tonic-tracing-opentelemetry.workspace = true
json-subscriber.workspace = true

[dev-dependencies]
ark-lib = { path = "../lib", features = [ "test-util" ] }
