[package]
name = "bark-shinigami"
version = "0.1.0"
license = "MIT"
authors = [ "Team Second <hello@second.tech>" ]
edition = "2021"
rust-version = "1.74"
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Experimental Bark input interoperability for Cairo manifest-binding programs"
readme = "README.md"
publish = false

[features]
wasm-web = [ "ark-lib/wasm-web" ]

[dependencies]
ark-lib = { version = "0.3.0", path = "../lib" }
thiserror.workspace = true

[dev-dependencies]
ark-lib = { version = "0.3.0", path = "../lib", features = [ "test-util" ] }
serde_json.workspace = true

[lints.clippy]
all = { level = "allow", priority = -1 }
arithmetic_side_effects = "deny"
