[package]
name = "ark-testing"
version = "0.0.0"
edition = "2024"

[features]
slow_test = []

[dependencies]
ark-lib = { path = "../lib", features = ["test-util"] }
bark-server = { path = "../server" }
bark-server-log = { path = "../server-log" }
bark-server-rpc = { path = "../server-rpc", features = ["server"] }
bark-cln-rpc = { path = "../cln-rpc"}
bark-json = { path = "../bark-json"}
bark-wallet = { path = "../bark" }
bark-bitcoin-ext = { path = "../bitcoin-ext" }

bitcoincore-rpc = "0.19.0"
portpicker = "0.1.1"
regex = "1.10.5"
libc = "0.2"
which = "6.0.1"
nix = { version = "0.29", features = [ "signal" ] }
uuid = { version = "1.17.0", features = ["v4"] }

anyhow.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bitcoin.workspace = true
bip39 = { workspace = true, features = ["rand"] }
bdk_esplora.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
rand.workspace = true
tokio = { workspace = true, features = [ "process" ] }
tokio-stream.workspace = true
tonic.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio-postgres.workspace = true
semver.workspace = true
parking_lot.workspace = true
