[package]
name = "wasm-testing"
version = "0.0.0"
license = "MIT"
edition = "2024"

[[bin]]
name = "wasm-test-suite"
path = "src/bin/wasm_test_suite.rs"
required-features = [ "bin" ]

[features]

bin = [
	"dep:ark-testing",
	"tokio/process",
	"tokio/signal",
	"tokio/macros",
	"tokio/rt-multi-thread",
]

wasm = [
	"bark-wallet/wasm-web",
	"bark-wallet/indexed-db",
	"bark-wallet/onchain-bdk",
	"bark-server-rpc/tonic-web",
	"dep:gloo-net",
	"dep:wasm-bindgen-futures",
]

[dependencies]
ark-testing = { path = "../testing", optional = true }
bark-wallet = { path = "../bark", default-features = false }
bark-server-rpc = { path = "../server-rpc", default-features = false }

anyhow = { workspace = true, optional = true }
bitcoin.workspace = true
log.workspace = true
tokio = { workspace = true, features = [] }
tokio-util.workspace = true
gloo-net = { version = "0.6", default-features = false, features = ["http"], optional = true }
wasm-bindgen-futures = { version = "0.4.56", optional = true }

[dev-dependencies]
bip39.workspace = true
futures.workspace = true
wasm-bindgen-test = "0.3"
console_log = "0.2"
